# EVE_Gatekeeper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_IMAGE_GENERATION_GUIDE.md  AI_PROMPTS_READY_TO_USE.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MOCKUP_GUIDE.md  PRIVACY_POLICY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  UI_MOCKUPS.txt  UI_UX_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  interactive-mockup.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_api_server.py  setup.py  test_components.py  validate.py  visualize_evemap_ui.py
.github/workflows/: ci.yml  deploy.yml  test.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/guides/: GOOGLE_PLAY_GUIDE.md
apps/desktop/: .gitignore  package.json
apps/mobile/: App.tsx  app.json  package-lock.json  package.json
backend/: README.md  alembic.ini  requirements.txt  test_backend.py  verify.py
backend/app/: logging.py  main.py
backend/examples/: test_foundation.py  test_mock_data.py
backend/scripts/: init_universe.py
backend/starmap/: __init__.py  ingest_sde.py  refresh_cache.py
docs/: API_EXAMPLES.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  SCREENSHOTS.md  api_reference.md  features.md  getting_started.md  mvp_plan.md
examples/: api_integration_examples.py  basic_map.py  basic_transcription.py  chord_detection.py  generate_demo_visuals.py  ios_client_example.swift  test_capital_planner.py
ios/: APP_STORE_GUIDE.md
ios/app/: ios_evemap_app.swift
ios/examples/: ios_capital_planner.swift
mobile-app/: App.js  README.md  package-lock.json  package.json
scripts/: generate_universe.py  run_api.py
src/aiguitartabs/: __init__.py  audio_processor.py  chord_detector.py  exporters.py  pitch_detector.py  tab_generator.py
src/evemap/: __init__.py  api.py  cache.py  capital_planner.py  database.py  esi_client.py  graph_engine.py  models.py  (+2 more)
tests/: __init__.py  conftest.py  test_audio_processor.py  test_pitch_detector.py  test_tab_generator.py  test_universe.py
(+106 files in other folders)
